--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ a:active {
 
 /*estilos do cabeçalho*/
 .cabecalho {
-    background-image: url("img/fundo.png");
+    background-image: url("img/fundo-de-frutas.png");
 }
 .img {
     width: 100%;
